# surprise-recomendator

./: README.md  preguntas_practica.txt  pyproject.toml
poetry/: __init__.py
surprise/deliverable/: requirements.txt  script-sistrec.py  sistrec.py
surprise/examples/: example_grid_search.py  example_surprise.py
