[tool.poetry]
name = "surprise-recomendator"
version = "1.0.0"
description = "Práctica de RIWS sobre un sistema de recomendación"
authors = ["David Fraga Rodríguez <davidfraga92@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "^1.26.2"
pytest = "^7.4.3"
black = "^23.11.0"
cython = "^3.0.6"
setuptools = "^69.0.2"
scikit-surprise = "^1.1.3"
tabulate = "^0.9.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
