[tool.poetry]
name = "surprise-recomendator"
version = "1.0.0"
description = "Práctica de RIWS sobre un sistema de recomendación"
authors = ["David Fraga Rodríguez <david.fraga.rodriguez@udc.es"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "1.26.2"
pytest = "^7.4.3"
black = "^23.11.0"
cython = "^3.0.6"
setuptools = "^69.0.2"
scipy = "1.11.4"
scikit-surprise = "1.1.3"
tabulate = "^0.9.0"
pandas = "^2.1.3"
joblib = "1.3.2"

[tool.poetry.scripts]
lint = "poetry:lint"
fmt = "poetry:format_code"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
